--- a/app/src/main/res/layout/spinner_white.xml
+++ b/app/src/main/res/layout/spinner_white.xml
@@ -5,5 +5,5 @@
     android:layout_height="wrap_content"
     android:gravity="center"
     android:padding="5dip"
-    android:textColor="#FFffff"
+    android:textColor="#000000"
     android:textSize="20sp" />
