--- a/app/src/main/res/layout/schedule_layout.xml
+++ b/app/src/main/res/layout/schedule_layout.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal">
@@ -10,22 +10,18 @@
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
         android:text="@string/name_text"
-        android:textColor="@android:color/black" />
+        android:textColor="@android:color/black"
+        android:textSize="25sp" />
 
     <TextView
         android:id="@+id/freq_medicine"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
         android:layout_margin="10dp"
         android:text="@string/frequency_text"
-        android:textColor="@android:color/black" />
+        android:textColor="@android:color/black"
+        android:textSize="25sp" />
 
-    <ListView
-        android:id="@+id/time_of_day"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp">
-
-    </ListView>
-
-</LinearLayout>
+</RelativeLayout>
